--- a/module3-document-classification/LS_DS_413_Document_Classification_Lecture.ipynb
+++ b/module3-document-classification/LS_DS_413_Document_Classification_Lecture.ipynb
@@ -447,9 +447,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "U4-S1-NLP-DS11",
+   "display_name": "U4-S1-NLP (Python3)",
    "language": "python",
-   "name": "u4-s1-nlp-ds11"
+   "name": "u4-s1-nlp"
   },
   "language_info": {
    "codemirror_mode": {
@@ -461,7 +461,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
